--- a/package.json
+++ b/package.json
@@ -28,5 +28,22 @@
         "decorator",
         "annotation"
     ],
-    "license": "ISC"
+    "license": "ISC",
+    "devDependencies": {
+        "@types/jest": "^27.0.3",
+        "@types/node": "^16.11.13",
+        "copy-webpack-plugin": "^10.1.0",
+        "coveralls": "^3.1.1",
+        "jest": "^27.4.5",
+        "jest-junit": "^13.0.0",
+        "ts-jest": "^27.1.1",
+        "ts-loader": "^9.2.6",
+        "ts-node": "^10.4.0",
+        "tsconfig-paths": "^3.12.0",
+        "tsconfig-paths-webpack-plugin": "^3.5.2",
+        "typescript": "^4.5.4",
+        "webpack": "^5.65.0",
+        "webpack-cli": "^4.9.1",
+        "webpack-node-externals": "^3.0.0"
+    }
 }
